{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 222,
  "lineage": "c5eaf3d1-28d9-9499-413d-b2c3a20c043c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0290d125069898f50",
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:elastic-ip/eipalloc-0290d125069898f50",
            "association_id": "eipassoc-0e58e767ec100fb64",
            "domain": "vpc",
            "id": "eipalloc-0290d125069898f50",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-068249bf94c3344ed",
            "private_dns": "ip-10-0-1-159.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-3-39-181-41.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.181.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sample-app-v3-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-nat-eip",
              "Project": "sample-app-v3"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:internet-gateway/igw-09d5f8264bfea4ea7",
            "id": "igw-09d5f8264bfea4ea7",
            "owner_id": "805400277714",
            "tags": {
              "Name": "sample-app-v3-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-igw",
              "Project": "sample-app-v3"
            },
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0290d125069898f50",
            "association_id": "eipassoc-0e58e767ec100fb64",
            "connectivity_type": "public",
            "id": "nat-0fc98770ba74803a2",
            "network_interface_id": "eni-068249bf94c3344ed",
            "private_ip": "10.0.1.159",
            "public_ip": "3.39.181.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09edbec311aafa404",
            "tags": {
              "Name": "sample-app-v3-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-nat",
              "Project": "sample-app-v3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:route-table/rtb-08f3495f6299254fe",
            "id": "rtb-08f3495f6299254fe",
            "owner_id": "805400277714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc98770ba74803a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-app-v3-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-private-rt",
              "Project": "sample-app-v3"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:route-table/rtb-007cc2ea2b8cd1f9d",
            "id": "rtb-007cc2ea2b8cd1f9d",
            "owner_id": "805400277714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d5f8264bfea4ea7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-app-v3-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-public-rt",
              "Project": "sample-app-v3"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9e4d5ba4f501e4d",
            "route_table_id": "rtb-08f3495f6299254fe",
            "subnet_id": "subnet-04d74ccb12340b0b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b471b2fc1f24536c",
            "route_table_id": "rtb-08f3495f6299254fe",
            "subnet_id": "subnet-0537ee2867665f464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093473bbf2ac1a812",
            "route_table_id": "rtb-007cc2ea2b8cd1f9d",
            "subnet_id": "subnet-09edbec311aafa404"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0947f541365b245cd",
            "route_table_id": "rtb-007cc2ea2b8cd1f9d",
            "subnet_id": "subnet-0b1fe83384b76c4df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:security-group/sg-00e076b3fd88e6bab",
            "description": "Allow MySQL from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e076b3fd88e6bab",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "MySQL from private subnets (EKS nodes)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sample-app-v3-rds-sg",
            "name_prefix": "",
            "owner_id": "805400277714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-app-v3-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-rds-sg",
              "Project": "sample-app-v3"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:subnet/subnet-04d74ccb12340b0b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d74ccb12340b0b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805400277714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-app-v3-private-1",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-private-1",
              "Project": "sample-app-v3",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:subnet/subnet-0537ee2867665f464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0537ee2867665f464",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805400277714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-app-v3-private-2",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-private-2",
              "Project": "sample-app-v3",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:subnet/subnet-09edbec311aafa404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09edbec311aafa404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805400277714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-app-v3-public-1",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-public-1",
              "Project": "sample-app-v3",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:subnet/subnet-0b1fe83384b76c4df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1fe83384b76c4df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805400277714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-app-v3-public-2",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-public-2",
              "Project": "sample-app-v3",
              "kubernetes.io/cluster/sample-app-v3-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-089f8971fb23ad029"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:805400277714:vpc/vpc-089f8971fb23ad029",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e071508563ce999",
            "default_route_table_id": "rtb-07f4953f2b9ae4374",
            "default_security_group_id": "sg-0763bd7bfbdb00370",
            "dhcp_options_id": "dopt-061c17246a2601281",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089f8971fb23ad029",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f4953f2b9ae4374",
            "owner_id": "805400277714",
            "tags": {
              "Name": "sample-app-v3-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sample-app-v3-vpc",
              "Project": "sample-app-v3"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}